--- a/preuba.ipynb
+++ b/preuba.ipynb
@@ -5,7 +5,9 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Aqui hago una rueba"
+   ]
   },
   {
    "cell_type": "code",
@@ -13,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=3"
+    "a=3\n",
+    "b=4"
    ]
   }
  ],
