--- a/preuba.ipynb
+++ b/preuba.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aqui hago una rueba"
+    "# Aqui hago una rueba\n",
+    "\n",
+    "x=np.linspace(1,2,2)"
    ]
   },
   {
