--- a/preuba.ipynb
+++ b/preuba.ipynb
@@ -6,9 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aqui hago una rueba\n",
+    "# Aqui hago una rueba note que las cosas que se imprimen en la terminal se\n",
     "\n",
-    "x=np.linspace(1,2,2)"
+    "# pueden ver en el archivo de log\n",
+    "import logging\n",
+    "import sys"
    ]
   },
   {
@@ -23,8 +25,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "class",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
