--- a/preuba.ipynb
+++ b/preuba.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "# pueden ver en el archivo de log\n",
     "import logging\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "vamos a dejar este"
    ]
   },
   {
