--- a/preuba.ipynb
+++ b/preuba.ipynb
@@ -27,8 +27,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "class",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
